Initial (empty) version MySql driver in SQL schema + splited tests in SQL schema

--- a/libs/Sql/CMakeLists.txt
+++ b/libs/Sql/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES_FILES
     src/Mdt/Sql/Schema/Driver.cpp
     src/Mdt/Sql/Schema/DriverImplementationInterface.cpp
     src/Mdt/Sql/Schema/DriverSQLite.cpp
+    src/Mdt/Sql/Schema/DriverMySql.cpp
     src/Mdt/Sql/Schema/FieldTypeInfoModel.cpp
 )
 
