Field type name conversion in new SQL Schema

--- a/libs/Sql/CMakeLists.txt
+++ b/libs/Sql/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES_FILES
     src/Mdt/Sql/Schema/DriverImplementationInterface.cpp
     src/Mdt/Sql/Schema/DriverSQLite.cpp
     src/Mdt/Sql/Schema/DriverMySql.cpp
+    src/Mdt/Sql/Schema/FieldTypeName.cpp
     src/Mdt/Sql/Schema/FieldTypeInfoModel.cpp
 )
 
