Created TableTemplate in new SQL Schema

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -6,7 +6,9 @@ enable_testing()
 
 #================= SQL test library ====================
 
-set(SOURCES_FILES 
+set(SOURCES_FILES
+    src/Schema/Client_tbl.cpp
+    src/Schema/Address_tbl.cpp
     src/TestDatabaseSchema.cpp
 )
 
