Init Schema in new SQL Schema

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES_FILES
     src/Schema/Client_tbl.cpp
     src/Schema/Address_tbl.cpp
     src/Schema/ClientAddressView.cpp
+    src/Schema/TestSchema.cpp
     src/TestDatabaseSchema.cpp
 )
 
