Created new InsertQuery + implemented table population in new SQL Schema driver

--- a/libs/Sql/CMakeLists.txt
+++ b/libs/Sql/CMakeLists.txt
@@ -1,5 +1,4 @@
 # Project file for Multi Diag Tools
-# * Part: CableList *
 
 # Project
 project(multidiagtools)
@@ -8,6 +7,7 @@ project(multidiagtools)
 set(SOURCES_FILES 
     src/Mdt/Sql/Error.cpp
     src/Mdt/Sql/Query.cpp
+    src/Mdt/Sql/InsertQuery.cpp
     src/Mdt/Sql/Schema/Driver.cpp
     src/Mdt/Sql/Schema/DriverImplementationInterface.cpp
     src/Mdt/Sql/Schema/DriverSQLite.cpp
@@ -47,9 +47,6 @@ target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdterror${MDT
 target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdterrorgui${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdtalgorithm${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} Qt5::Sql)
-
-## TODO remove once possible
-target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdtdatabase${MDTLIB_VERSION_SUFFIX}")
 
 # Translation files
 set(TS_FILES
