Working on delegate proxy + created new table model for tests

--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -4,8 +4,9 @@
 project(multidiagtools)
 
 # List of source files
-set(SOURCES_FILES 
+set(SOURCES_FILES
     src/Mdt/ItemEditor/RowChangeEventMapper.cpp
+    src/Mdt/ItemEditor/ItemDelegateProxy.cpp
     src/Mdt/ItemEditor/StandardWindow.cpp
 )
 
