--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -7,6 +7,8 @@ project(multidiagtools)
 set(SOURCES_FILES
     src/Mdt/ItemEditor/RowChangeEventMapper.cpp
     src/Mdt/ItemEditor/ItemDelegateProxy.cpp
+    src/Mdt/ItemEditor/EventCatchItemDelegate.cpp
+    src/Mdt/ItemEditor/RowChangeEventMapper.cpp
     src/Mdt/ItemEditor/StandardWindow.cpp
 )
 
