Working on navigation actions in ItemEditor

--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/EventCatchItemDelegate.cpp
     src/Mdt/ItemEditor/ItemSelectionModel.cpp
     src/Mdt/ItemEditor/RowChangeEventMapper.cpp
+    src/Mdt/ItemEditor/NavigationActions.cpp
     src/Mdt/ItemEditor/StandardWindow.cpp
 )
 
