--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ enable_testing()
 set(SOURCES_FILES
   src/TestTableModel.cpp
   src/ItemViewTestEdit.cpp
+  src/TestWindowEditor.cpp
 )
 
 add_library(mdtitemeditortest SHARED ${SOURCES_FILES})
