--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -11,7 +11,12 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/ItemSelectionModel.cpp
     src/Mdt/ItemEditor/RowChangeEventMapper.cpp
     src/Mdt/ItemEditor/NavigationActions.cpp
+    src/Mdt/ItemEditor/AbstractController.cpp
+    src/Mdt/ItemEditor/TableController.cpp
     src/Mdt/ItemEditor/StandardEditorLayoutWidget.cpp
+    src/Mdt/ItemEditor/AbstractEditorWidget.cpp
+    src/Mdt/ItemEditor/AbstractTableViewWidget.cpp
+    src/Mdt/ItemEditor/TableViewWidget.cpp
     src/Mdt/ItemEditor/StandardWindow.cpp
     src/Mdt/ItemEditor/AbstractWindow.cpp
     src/Mdt/ItemEditor/ControllerStatePermission.cpp
