--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES_FILES
   src/TestTableModel.cpp
   src/ItemViewTestEdit.cpp
   src/TestTableEditionWidget.cpp
+  src/TestFormEditionWidget.cpp
   src/TestWindowEditor.cpp
 )
 
