--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/AbstractController.cpp
     src/Mdt/ItemEditor/AbstractItemViewController.cpp
     src/Mdt/ItemEditor/TableViewController.cpp
+    src/Mdt/ItemEditor/MappedWidgetList.cpp
     src/Mdt/ItemEditor/AbstractWidgetMapperController.cpp
     src/Mdt/ItemEditor/WidgetMapperController.cpp
     src/Mdt/ItemEditor/StandardEditorLayoutWidget.cpp
