Created edition actions in ItemEditor lib

--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/RowChangeEventDispatcher.cpp
     src/Mdt/ItemEditor/NavigationActions.cpp
     src/Mdt/ItemEditor/InsertAction.cpp
+    src/Mdt/ItemEditor/EditionActions.cpp
     src/Mdt/ItemEditor/ControllerStatePermission.cpp
     src/Mdt/ItemEditor/AbstractController.cpp
     src/Mdt/ItemEditor/AbstractItemViewController.cpp
