Implementing DataWidgetMapper in ItemEditor lib

--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -17,7 +17,7 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/AbstractController.cpp
     src/Mdt/ItemEditor/AbstractItemViewController.cpp
     src/Mdt/ItemEditor/TableViewController.cpp
-    src/Mdt/ItemEditor/MappedWidgetList.cpp
+#     src/Mdt/ItemEditor/MappedWidgetList.cpp
     src/Mdt/ItemEditor/DataWidgetMapper.cpp
     src/Mdt/ItemEditor/AbstractWidgetMapperController.cpp
     src/Mdt/ItemEditor/WidgetMapperController.cpp
