Sanboxing about a static counter in FilterExpression lib

--- a/libs/FilterExpression/tests/CMakeLists.txt
+++ b/libs/FilterExpression/tests/CMakeLists.txt
@@ -10,3 +10,10 @@ target_link_libraries(mdtfilterexpressionsandbox "${LIBRARY_BIN_NAME}${MDTLIB_VE
 target_link_libraries(mdtfilterexpressionsandbox "mdtapplication${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtfilterexpressionsandbox Qt5::Test)
 add_test(MdtFilterExpressionSandbox ${CMAKE_CURRENT_BINARY_DIR}/mdtfilterexpressionsandbox)
+
+# Target MdtFilterExpressionOtherSandbox
+add_executable(mdtfilterexpressionothersandbox src/OtherSandbox.cpp)
+target_link_libraries(mdtfilterexpressionothersandbox "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtfilterexpressionothersandbox "mdtapplication${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtfilterexpressionothersandbox Qt5::Test)
+add_test(MdtFilterExpressionOtherSandbox ${CMAKE_CURRENT_BINARY_DIR}/mdtfilterexpressionothersandbox)
