Sandboxing on expression in SQL lib

--- a/libs/FilterExpression/tests/CMakeLists.txt
+++ b/libs/FilterExpression/tests/CMakeLists.txt
@@ -31,3 +31,10 @@ target_link_libraries(mdtfilterexpressionfilterexpressiontest "${LIBRARY_BIN_NAM
 target_link_libraries(mdtfilterexpressionfilterexpressiontest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtfilterexpressionfilterexpressiontest Qt5::Test)
 add_test(MdtFilterExpressionFilterExpressionTest ${CMAKE_CURRENT_BINARY_DIR}/mdtfilterexpressionfilterexpressiontest)
+
+# Target MdtFilterExpressionJoinConstraintExpressionTest
+add_executable(mdtfilterexpressionjoinconstraintexpressiontest src/JoinConstraintExpressionTest.cpp)
+target_link_libraries(mdtfilterexpressionjoinconstraintexpressiontest "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtfilterexpressionjoinconstraintexpressiontest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtfilterexpressionjoinconstraintexpressiontest Qt5::Test)
+add_test(MdtFilterExpressionJoinConstraintExpressionTest ${CMAKE_CURRENT_BINARY_DIR}/mdtfilterexpressionjoinconstraintexpressiontest)
