--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -54,3 +54,13 @@ add_test(MdtSqlSchemaDriverPostgreSqlTest ${CMAKE_CURRENT_BINARY_DIR}/mdtsqlsche
 add_executable(mdtsqlschemaviewtest src/SchemaViewTest.cpp)
 target_link_libraries(mdtsqlschemaviewtest "mdtsqltest")
 add_test(MdtSqlSchemaViewTest ${CMAKE_CURRENT_BINARY_DIR}/mdtsqlschemaviewtest)
+
+# Target MdtSqlJoinClauseTest
+add_executable(mdtsqljoinclausetest src/JoinClauseTest.cpp)
+target_link_libraries(mdtsqljoinclausetest "mdtsqltest")
+add_test(MdtSqlJoinClauseTest ${CMAKE_CURRENT_BINARY_DIR}/mdtsqljoinclausetest)
+
+# Target MdtSqlSearchConditionExpressionTest
+add_executable(mdtsqlsearchconditionexpressiontest src/SearchConditionExpressionTest.cpp)
+target_link_libraries(mdtsqlsearchconditionexpressiontest "mdtsqltest")
+add_test(MdtSqlSearchConditionExpressionTest ${CMAKE_CURRENT_BINARY_DIR}/mdtsqlsearchconditionexpressiontest)
