In lib Sql: working on new FraomClause* classes

--- a/libs/Sql/CMakeLists.txt
+++ b/libs/Sql/CMakeLists.txt
@@ -13,8 +13,11 @@ set(SOURCES_FILES
     src/Mdt/Sql/Expression/ComparisonSqlTransform.cpp
     src/Mdt/Sql/Expression/LogicalSqlTransform.cpp
     src/Mdt/Sql/JoinConstraintExpression.cpp
+    src/Mdt/Sql/FromClause.cpp
+    src/Mdt/Sql/FromClauseSqlTransform.cpp
     src/Mdt/Sql/WhereExpression.cpp
     src/Mdt/Sql/SelectStatement.cpp
+    src/Mdt/Sql/SelectQuery.cpp
     src/Mdt/Sql/Schema/Driver.cpp
     src/Mdt/Sql/Schema/DriverImplementationInterface.cpp
     src/Mdt/Sql/Schema/DriverSQLite.cpp
