--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -38,6 +38,7 @@ addSqlTest("ExpressionTest")
 addSqlTest("WhereExpressionTest")
 addSqlTest("JoinConstraintExpressionTest")
 addSqlTest("JoinClauseTest")
+addSqlTest("FromClauseTest")
 addSqlTest("SelectStatementTest")
 addSqlTest("QueryTest")
 addSqlTest("SchemaTest")
