In lib Sql: working on JoinClause

--- a/libs/Sql/CMakeLists.txt
+++ b/libs/Sql/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES_FILES
     src/Mdt/Sql/Expression/ComparisonSqlTransform.cpp
     src/Mdt/Sql/Expression/LogicalSqlTransform.cpp
     src/Mdt/Sql/JoinConstraintExpression.cpp
+    src/Mdt/Sql/JoinClause.cpp
     src/Mdt/Sql/FromClause.cpp
     src/Mdt/Sql/FromClauseSqlTransform.cpp
     src/Mdt/Sql/WhereExpression.cpp
