In lib Sql: working on auto join

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -37,6 +37,7 @@ addSqlTest("SimpleTypesTest")
 addSqlTest("ExpressionTest")
 addSqlTest("WhereExpressionTest")
 addSqlTest("JoinConstraintExpressionTest")
+addSqlTest("JoinConstraintFieldPairTest")
 addSqlTest("JoinClauseTest")
 addSqlTest("FromClauseTest")
 addSqlTest("SelectStatementTest")
