--- a/libs/Sql/CMakeLists.txt
+++ b/libs/Sql/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCES_FILES
     src/Mdt/Sql/JoinConstraintFieldPairListSqlTransform.cpp
     src/Mdt/Sql/JoinConstraintExpression.cpp
     src/Mdt/Sql/JoinConstraint.cpp
+    src/Mdt/Sql/JoinConstraintSqlTransform.cpp
     src/Mdt/Sql/JoinClause.cpp
     src/Mdt/Sql/FromClause.cpp
     src/Mdt/Sql/FromClauseSqlTransform.cpp
